--- a/cfp.html
+++ b/cfp.html
@@ -22,13 +22,23 @@
 				justify-content: space-between;
 			}
 
-			.header-wrap-1 img {
+			.pic {
+				flex-grow: 3.5;
+			}
+			.pic img{
 				height: 115px;
 			}
-			
-			.logo img{
-				height: 70px;
-				margin-right: 50px;	
+			.logo1{
+				flex-grow: 1;
+			}
+			.logo2{
+				flex-grow: 1;
+			}
+			.logo1 img{
+				height: 55px;
+			} 
+			.logo2 img{
+				height: 48px;
 			}
 			
 			.firstword {
@@ -60,11 +70,14 @@
 		<!-- Header -->
 		<div class="container">
 			<div class="header-wrap-1">
-				<div>
-					<a class="brand" href="index.html"><img src="img/1.logo.png" alt="Logo"></a>
+				<div class="pic">
+					<a class="brand" href="#"><img src="img/1.logo.png" alt="Logo"></a>
 				</div>
-				<div class="logo">
-					<img src="img/logos-web/IEEE-CS_LogoTM-white.png" alt="Logo">
+				<div class="logo1">
+					<img src="img/logo1/IEEE-CS_LogoTM-white.png" alt="Logo">
+				</div>
+				<div class="logo2">
+					<img src="img/logo2/ieee_white.png" alt="Logo">
 				</div>
 			</div>
 		</div>
@@ -229,8 +242,8 @@
 							<p>Conference Acronym: <strong>IEEE Satellite 2022</strong></p>
 					
 							<h4 style="margin-bottom: 0rem;margin-top: 1.5rem;">Conference Date:</h4>
-							<p style="margin-bottom: 0;">Start Date: <strong>Oct.25, 2022</strong></p>
-							<p>End Date: <strong>Oct.27, 2022</strong></p>
+							<p style="margin-bottom: 0;">Start Date: <strong>Tuesday, 25 October 2022</strong></p>
+							<p>End Date: <strong>Thursday, 27 October 2022</strong></p>
 					
 							<h4 style="margin-bottom: 0rem;margin-top: 1.5rem;">Conference Location:</h4>
 							<p style="margin-bottom: 0;">Country: <strong>China</strong></p>
