--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
 					</article>
 
 					<article>
-						<h3>ABOUT IEEE COMPUTER SOCIETY </h3>
+						<h3 style="margin-bottom: 1.2rem;">About IEEE Computer Society </h3>
 						<div class="pic-word">
 							<div class="picture2">
 								<a href="https://www.ieee.org/"><img src="img/logo1/IEEE-CS_LogoTM-black.png" /></a>
