--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@
         				var i=0;
         				for(i=0;i<arr.length;i++){
         					var arr2=arr[i].split('=');
-        					if(arr2[0]=="permission"){
+							// cookiec中有多个键值对时，竟然会默认在';' 后加空格，相当于arr2[0]是" permission"
+        					if(arr2[0].trim() == "permission"){
         						var value = unescape(arr2[1]);
         						return value;
         					}
