--- a/org_committee.html
+++ b/org_committee.html
@@ -351,7 +351,7 @@
 						var i=0;
 						for(i=0;i<arr.length;i++){
 							var arr2=arr[i].split('=');
-							if(arr2[0]=="permission"){
+							if(arr2[0].trim() == "permission"){
 								var value = unescape(arr2[1]);
 								return value;
 							}
