--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			strong {
 				color: #507dbc;
 			}
+
 		</style>
 		<!-- Font Awesome -->
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -123,24 +124,28 @@
 						<li class="nav-item ">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="org_committee.html"
+						<li class="nav-item dropdown titleBar ">
+							<a class="nav-link dropdown-toggle " href="authors.html"
+								role="button" aria-haspopup="true" aria-expanded="false">Authors</a>
+							<div class="dropdown-menu navbar-dark bg-primary">
+								<a class="dropdown-item" href="cfp.html">Call for Papers</a>
+								<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown titleBar ">
+							<a class="nav-link dropdown-toggle " href="org_committee.html"
 								role="button" aria-haspopup="true" aria-expanded="false">Committee</a>
 							<div class="dropdown-menu navbar-dark bg-primary">
 								<a class="dropdown-item" href="org_committee.html">Organizing Committee</a>
 								<a class="dropdown-item" href="t_committee.html">TPC Members</a>
-								<!-- <a class="dropdown-item" href="one-column.html">One column / no sidebar</a>
-									  <a class="dropdown-item"  href="text.html">Text / left sidebar</a> -->
 							</div>
 						</li>
+						
 						<li class="nav-item ">
 							<a class="nav-link" href="program.html">Program</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="registration.html">Registration</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="cfp.html">Call for Paper</a>
 						</li>
 
 
@@ -216,7 +221,13 @@
 								exchange the fundamental advances in state of the art and practice of Satellite
 								computing in the field of Computer Science and Electronic Engineers.</p>
 						</article>
-
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
+                        <br/>
 
 					</div>
 
@@ -300,10 +311,10 @@
 					<nav style="font-size: 1.1rem;text-align: center;">
 						<a href="index.html" title="">Home </a> |
 						<a href="about.html" title="">About </a> |
+						<a href="authors.html" title="">Authors </a> |
 						<a href="org_committee.html" title="">Committee </a> |
 						<a href="program.html" title="">Program </a> |
-						<a href="registration.html" title="">Registration </a> |
-						<a href="cfp.html" title="">Call for Paper</a>
+						<a href="registration.html" title="">Registration </a>
 					</nav>
 					<p style="text-align: center;font-size: 1.1rem;"><a href="#">Back to top</a></p>
 					<p class="text-center">© Copyright 2022 IEEE - All rights reserved.</p>
