--- a/program.html
+++ b/program.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>2022 IEEE SATELLITE</title>
+		<title>Program | 2022 IEEE SATELLITE</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -123,14 +123,20 @@
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="org_committee.html"
+						<li class="nav-item dropdown titleBar ">
+							<a class="nav-link dropdown-toggle " href="authors.html"
+								role="button" aria-haspopup="true" aria-expanded="false">Authors</a>
+							<div class="dropdown-menu navbar-dark bg-primary">
+								<a class="dropdown-item" href="cfp.html">Call for Papers</a>
+								<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown titleBar ">
+							<a class="nav-link dropdown-toggle " href="org_committee.html"
 								role="button" aria-haspopup="true" aria-expanded="false">Committee</a>
 							<div class="dropdown-menu navbar-dark bg-primary">
 								<a class="dropdown-item" href="org_committee.html">Organizing Committee</a>
 								<a class="dropdown-item" href="t_committee.html">TPC Members</a>
-								<!-- <a class="dropdown-item" href="one-column.html">One column / no sidebar</a>
-									  <a class="dropdown-item"  href="text.html">Text / left sidebar</a> -->
 							</div>
 						</li>
                         <li class="nav-item active">
@@ -138,9 +144,6 @@
                         </li>
 						<li class="nav-item">
 							<a class="nav-link" href="registration.html">Registration</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="cfp.html">Call for Paper</a>
 						</li>
 
 
@@ -221,6 +224,10 @@
 						<br/>
 						<br/>
 						<br/>
+						<br/>
+						<br/>
+						<br/>
+						<br/>
 					</div>
 					
 					<div class="block-title">
@@ -245,10 +252,10 @@
 					<nav style="font-size: 1.1rem;text-align: center;">
 						<a href="index.html" title="">Home </a> |
 						<a href="about.html" title="">About </a> |
+						<a href="authors.html" title="">Authors </a> |
 						<a href="org_committee.html" title="">Committee </a> |
 						<a href="program.html" title="">Program </a> |
-						<a href="registration.html" title="">Registration </a> |
-						<a href="cfp.html" title="">Call for Paper</a>
+						<a href="registration.html" title="">Registration </a>
 					</nav>
 					<p style="text-align: center;font-size: 1.1rem;"><a href="#">Back to top</a></p>
 					<p class="text-center">© Copyright 2022 IEEE - All rights reserved.</p>
