--- a/authors.html
+++ b/authors.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Registration | 2022 IEEE SATELLITE</title>
+		<title>Authors | 2022 IEEE SATELLITE</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -123,7 +123,7 @@
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">About</a>
 						</li>
-						<li class="nav-item dropdown titleBar ">
+						<li class="nav-item dropdown titleBar active ">
 							<a class="nav-link dropdown-toggle " href="authors.html"
 								role="button" aria-haspopup="true" aria-expanded="false">Authors</a>
 							<div class="dropdown-menu navbar-dark bg-primary">
@@ -142,7 +142,7 @@
                         <li class="nav-item ">
                         	<a class="nav-link" href="program.html">Program</a>
                         </li>
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="registration.html">Registration</a>
 						</li>
 
@@ -203,14 +203,11 @@
 				
 				<div class="col-sm-9">
 					<div class="block-title">
-						<h2>Registration</h2>
+						<h2>Authors</h2>
 					</div>
 					<div class="sidebar-box-bg">
-						<br/>
-						<br/>
-						<br/>
-						<br/>
-						<br/>
+						<p style="font-size: 1.1rem;">Call For Papers Is Available  <a href="cfp.html"> Here</a></p>
+						<p style="font-size: 1.1rem;">Call For Demos And Posters Is Available  <a href="cfdap.html"> Here</a></p>
 						<br/>
 						<br/>
 						<br/>
@@ -241,6 +238,10 @@
 				</div>
 				
 				<aside class="col-sm-3">
+					<div class="sidebar-box-ag">
+						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for Papers </a>
+						<a style="display: block; font-size: 1.3rem;" href="cfdap.html">Call for Demos and Posters</a>
+					</div>
 				</aside>
 			</div>
 		</main>
@@ -287,7 +288,7 @@
 						var i=0;
 						for(i=0;i<arr.length;i++){
 							var arr2=arr[i].split('=');
-							if(arr2[0].trim() == "permission"){
+							if(arr2[0].trim()== "permission"){
 								var value = unescape(arr2[1]);
 								return value;
 							}
