--- a/authors.html
+++ b/authors.html
@@ -129,6 +129,8 @@
 							<div class="dropdown-menu navbar-dark bg-primary">
 								<a class="dropdown-item" href="cfp.html">Call for Papers</a>
 								<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
+								<a class="dropdown-item" href="cfstian.html">Call for Satellite Technology Innovation
+									Award Nomination</a>
 							</div>
 						</li>
 						<li class="nav-item dropdown titleBar ">
@@ -208,6 +210,8 @@
 					<div class="sidebar-box-bg">
 						<p style="font-size: 1.1rem;">Call For Papers Is Available  <a href="cfp.html"> Here</a></p>
 						<p style="font-size: 1.1rem;">Call For Demos And Posters Is Available  <a href="cfdap.html"> Here</a></p>
+						<p style="font-size: 1.1rem;">Call for Satellite Technology Innovation Award Nomination Is Available<a href="cfstian.html"> Here</a></p>
+						
 						<br/>
 						<br/>
 						<br/>
@@ -239,8 +243,11 @@
 				
 				<aside class="col-sm-3">
 					<div class="sidebar-box-ag">
-						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for Papers </a>
-						<a style="display: block; font-size: 1.3rem;" href="cfdap.html">Call for Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
+							Papers </a>
+						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem;" href="cfdap.html">Call for Satellite Technology
+							Innovation Award Nomination</a>
 					</div>
 				</aside>
 			</div>
