--- a/cfstian.html
+++ b/cfstian.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Call for Paper | 2022 IEEE SATELLITE</title>
+		<title>Call for Satellite Technology Innovation Award Nomination | 2022 IEEE SATELLITE</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -211,53 +211,53 @@
 				<!-- Main content -->
 				<div class="col-sm-9">
 					<div class="block-title">
-						<h2>Submitting a Paper</h2>
+						<h2>Call for Satellite Technology Innovation Award Nomination</h2>
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>The conference invites original papers addressing all aspects related to satellite
-								computing architecture, technology and applications. Technical topics of interest
-								include but are not limited to the following:</p>
+							<p>Satellite Technology Innovation Award recognizes one individual or one group of
+								collaborators who have made outstanding and innovative contributions to the advancement
+								of satellite technology.
+							</p>
+							</br>
+							</br>
+							
+						</article>
+		
+					</div>
 
+
+					<div class="block-title">
+						<h2>Nomination Process</h2>
+					</div>
+					<div class="sidebar-box-bg">
+						<article>
 							<ul>
-								<li>Satellite computing architecture/platform</li>
-								<li>Satellite network</li>
-								<li>Satellite communication</li>
-								<li>Cloud-native satellite</li>
-								<li>Satellite operation system</li>
-								<li>Ground station system</li>
-								<li>Satellite computing for smart city</li>
-								<li>Satellite computing for disaster rescue</li>
-								<li>Satellite and space system</li>
-								<li>Vehicular network and system</li>
-								<li>Unmanned aerial vehicle system</li>
-								<li>5/6G network and system</li>
-								<li>Edge network and system</li>
-								<li>Satellite security and privacy</li>
-								<li>AI for Satellite integrated system</li>
+								<li>Anyone in the field can nominate and/or support one person or a group of
+									collaborators. Self-nominations are not accepted.
+								</li>
+								<li>Every nomination should provide a proposed citation/a paper/a news report, a
+									detailed statement to justify the nomination (500 words or less), and a URL to an
+									English professional/team home page of the nominee. </li>
+								<li>Nominations that did not result in an award can be resubmitted or updated in
+									subsequent years.
+								</li>
+								<li>The Awards Committee will decide the winners
+								</li>
 							</ul>
 						</article>
 					</div>
 
 					<div class="block-title">
-						<h2>Format Requirements</h2>
+						<h2>Submission</h2>
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>All papers should be submitted via EasyChair submission system using this link. Full
-								Papers must be <strong>no longer than 6 pages</strong> with Standard
-								template. Standard template for Latex and Word can be found at:</p>
-							<p><a
-									href="https://www.ieee.org/conferences/publishing/templates.html">https://www.ieee.org/conferences/publishing/templates.html</a>
-							</p>
-							<p>In order to avoid the inconsistency of the page format of later articles, and to better
-								judge the number of pages of each article, it is recommended to specify the author to
-								use letter or A4 size template.</p>
-							<p>Accepted papers will be allowed 2 additional pages in the proceedings.</p>
-							<p>We also welcome <strong>Short Papers</strong> on any of the above topics, which will be
-								judged separately from papers in the research track of the conference. Submitted short
-								papers must be no longer than 2 pages. Accepted papers will not be allowed additional
-								pages in the proceedings.</p>
+							<p>Every nomination package should be submitted via EasyChair submission system using this
+								link, and the subject is in the form of "Satellite Technology Innovation Award
+								Nomination_nominee's/group's name".</p>
+							</br>
+							</br>
 						</article>
 					</div>
 
@@ -281,7 +281,6 @@
 						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
 						<a style="display: block; font-size: 1.3rem;" href="cfstian.html">Call for Satellite Technology
 							Innovation Award Nomination</a>
-
 					</div>
 				</aside>
 			</div>
