--- a/cfdap.html
+++ b/cfdap.html
@@ -133,6 +133,8 @@
 								<div class="dropdown-menu navbar-dark bg-primary">
 									<a class="dropdown-item" href="cfp.html">Call for Papers</a>
 									<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
+									<a class="dropdown-item" href="cfstian.html">Call for Satellite Technology Innovation
+										Award Nomination</a>
 								</div>
 							</li>
 							<li class="nav-item dropdown titleBar ">
@@ -285,7 +287,9 @@
 					<div class="sidebar-box-ag">
 						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
 							Papers </a>
-						<a style="display: block; font-size: 1.3rem;" href="cfdap.html">Call for Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem;" href="cfstian.html">Call for Satellite Technology
+							Innovation Award Nomination</a>
 					</div>
 				</aside>
 			</div>
