--- a/registration.html
+++ b/registration.html
@@ -1,59 +1,14 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Registration | 2022 IEEE SATELLITE</title>
+		<title>Registration | 2022 IEEE Satellite</title>
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="shortcut icon" href="img/icon-2.png" />
 
 		<link rel="stylesheet" href="css/style.css">
-		<style type="text/css">
-			/* .nav,.nav a {
-				color: #ffffff;
-				
-			} */
 
-			.header-wrap-1 {
-				background-color: #507dbc;
-				height: 115px;
-				display: flex;
-				align-items: center;
-				justify-content: space-between;
-			}
-
-			.pic {
-				flex-grow: 3.5;
-			}
-
-			.pic img {
-				height: 115px;
-			}
-
-			.logo1 {
-				flex-grow: 1;
-			}
-
-			.logo2 {
-				flex-grow: 1;
-			}
-
-			.logo1 img {
-				height: 55px;
-			}
-
-			.logo2 img {
-				height: 48px;
-			}
-
-			.firstword {
-				border-bottom: 2px solid #507dbc;
-			}
-
-			strong {
-				color: #507dbc;
-			}
-		</style>
 		<!-- Font Awesome -->
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	</head>
@@ -89,11 +44,17 @@
 		<!-- Header -->
 		<div class="container">
 			<div class="header-wrap-1">
-				<div class="pic">
-					<a class="brand" href="#"><img src="img/1.logo.png" alt="Logo"></a>
+				<div class="logo3">
+					<a class="brand" href="index.html"><img src="img/logo3.png" alt="Logo"></a>
+				</div>
+				<div class="info" style="color: #ffffff;">
+					<p style="margin-bottom: 0; font-size: 1.3rem;">IEEE International Conference on Satellite Computing</p>
+					<p style="margin-bottom: 0;">October 25-27, 2022 //  Shenzhen, China </p>
+					<p>Hybrid event </p>
 				</div>
 				<div class="logo1">
-					<a class="brand" href="https://www.computer.org/"><img src="img/logo1/IEEE-CS_LogoTM-white.png" alt="Logo"></a>
+					<a class="brand" href="https://www.computer.org/"><img src="img/logo1/IEEE-CS_LogoTM-white.png"
+							alt="Logo"></a>
 				</div>
 				<div class="logo2">
 					<a class="brand" href="https://www.ieee.org/"><img src="img/logo2/ieee_white.png" alt="Logo"></a>
