--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link rel="shortcut icon" href="img/icon-2.png" />
+		<link rel="shortcut icon" href="img/icon.png" />
 
 		<link rel="stylesheet" href="css/style.css">
 		
