--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
 						<div class="patrons-logo">
 							<a class="brand" href="http://www.tiansuan.org.cn"><img src="img/tiansuan.png"
 									style="height: 180px;" /></a>
+							<a class="brand" href="https://en.spacety.com/"><img src="img/tianyi.png"
+									style="height: 225px;width: 210px;margin-left: 15px;" /></a>
 						</div>
 					</div>
 				</div>
