--- a/cfp.html
+++ b/cfp.html
@@ -196,6 +196,10 @@
 								<li>Satellite security and privacy</li>
 								<li>AI for Satellite integrated system</li>
 							</ul>
+							<p><strong>All accepted papers are allowed to deploy
+									the studies on <a style="text-decoration: underline;"
+										href="http://www.tiansuan.org.cn">Tiansuan Constellation</a> with no charge (if
+									the authors are interested)</strong></p>
 						</article>
 					</div>
 
