--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="shortcut icon" href="img/icon.png" />
 
 		<link rel="stylesheet" href="css/style.css">
-		
+
 		<!-- Font Awesome -->
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	</head>
@@ -49,8 +49,9 @@
 					<a class="brand" href="index.html"><img src="img/logo3.png" alt="Logo"></a>
 				</div>
 				<div class="info" style="color: #ffffff;">
-					<p style="margin-bottom: 0; font-size: 1.3rem;">IEEE International Conference on Satellite Computing</p>
-					<p style="margin-bottom: 0;">October 25-27, 2022 //  Shenzhen, China </p>
+					<p style="margin-bottom: 0; font-size: 1.3rem;">IEEE International Conference on Satellite Computing
+					</p>
+					<p style="margin-bottom: 0;">October 25-27, 2022 // Shenzhen, China </p>
 					<p>Hybrid event </p>
 				</div>
 				<div class="logo1">
@@ -79,7 +80,7 @@
 				<!-- Main navigation items -->
 				<div class="collapse navbar-collapse" id="mainNavbar">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active"  >
+						<li class="nav-item active">
 							<a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item ">
@@ -175,11 +176,14 @@
 							<h4>IEEE Satellite 2022 - Hybrid Event </h4>
 							<p>IEEE Satellite 2022 will be held as a hybrid event. Presenters may present their papers
 								in person in Shenzhen or virtually. Presenters should choose the presentation format
-								after their papers have been accepted.</p>
+								after their papers have been accepted.<strong> All accepted papers are allowed to deploy
+									the studies on <a style="text-decoration: underline;"
+										href="http://www.tiansuan.org.cn">Tiansuan Constellation</a> with no charge (if
+									the authors are interested)</strong></p>
 							<br />
 							<h4>Welcome to IEEE Satellite 2022!</h4>
 							<p>The 2022 IEEE International Conference on Satellite Computing will be held from 25 to 27
-								October 2022 in the beautifu and warm city of Shenzhen, China. The conference aims to
+								October 2022 in the beautiful and warm city of Shenzhen, China. The conference aims to
 								become a prime international forum for both researchers and industry practitioners to
 								exchange the fundamental advances in state of the art and practice of Satellite
 								computing in the field of Computer Science and Electronic Engineers.</p>
