--- a/cfp.html
+++ b/cfp.html
@@ -49,8 +49,9 @@
 					<a class="brand" href="index.html"><img src="img/logo3.png" alt="Logo"></a>
 				</div>
 				<div class="info" style="color: #ffffff;">
-					<p style="margin-bottom: 0; font-size: 1.3rem;">IEEE International Conference on Satellite Computing</p>
-					<p style="margin-bottom: 0;">October 25-27, 2022 //  Shenzhen, China </p>
+					<p style="margin-bottom: 0; font-size: 1.3rem;">IEEE International Conference on Satellite Computing
+					</p>
+					<p style="margin-bottom: 0;">October 25-27, 2022 // Shenzhen, China </p>
 					<p>Hybrid event </p>
 				</div>
 				<div class="logo1">
@@ -93,7 +94,8 @@
 								<div class="dropdown-menu navbar-dark bg-primary">
 									<a class="dropdown-item" href="cfp.html">Call for Papers</a>
 									<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
-									<a class="dropdown-item" href="cfstian.html">Call for Satellite Technology Innovation
+									<a class="dropdown-item" href="cfstian.html">Call for Satellite Technology
+										Innovation
 										Award Nomination</a>
 								</div>
 							</li>
@@ -186,15 +188,22 @@
 								<li>Cloud-native satellite</li>
 								<li>Satellite operation system</li>
 								<li>Ground station system</li>
+								<li>Remote sensing</li>
+								<li>Earth observation</li>
+								<li>Solar energy</li>
 								<li>Satellite computing for smart city</li>
 								<li>Satellite computing for disaster rescue</li>
 								<li>Satellite and space system</li>
+								<li>Space surveillance and tracking</li>
+								<li>Autonomous systems and robotics for space</li>
+								<li>Space environment and protection</li>
 								<li>Vehicular network and system</li>
 								<li>Unmanned aerial vehicle system</li>
 								<li>5/6G network and system</li>
 								<li>Edge network and system</li>
 								<li>Satellite security and privacy</li>
 								<li>AI for Satellite integrated system</li>
+								<li>Laser communication</li>
 							</ul>
 							<p><strong>All accepted papers are allowed to deploy
 									the studies on <a style="text-decoration: underline;"
@@ -208,16 +217,21 @@
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>All papers should be submitted via EasyChair submission system using this link. Full
-								Papers must be <strong>no longer than 6 pages</strong> with Standard
-								template. Standard template for Latex and Word can be found at:</p>
-							<p><a
+							<p>All papers should be submitted via EasyChair submission system using this link. IEEE
+								Satellite will incorporate a <strong>double-blind</strong> review process. All papers
+								must not include
+								authors’ names and affiliations or any other contents revealing authors' information.
+								Full Papers must be <strong>no longer than 6 pages</strong> with Standard
+								template (
+								<a style="color: #4a4a4a;font-weight:400 ;"
 									href="https://www.ieee.org/conferences/publishing/templates.html">https://www.ieee.org/conferences/publishing/templates.html</a>
-							</p>
-							<p>In order to avoid the inconsistency of the page format of later articles, and to better
+
+								). In order to avoid the inconsistency of the page format of later articles, and to
+								better
 								judge the number of pages of each article, it is recommended to specify the author to
-								use letter or A4 size template.</p>
-							<p>Accepted papers will be allowed 2 additional pages in the proceedings.</p>
+								use letter or A4 size template.
+								Accepted papers will be allowed 2 additional pages in the proceedings.
+							</p>
 							<p>We also welcome <strong>Short Papers</strong> on any of the above topics, which will be
 								judged separately from papers in the research track of the conference. Submitted short
 								papers must be no longer than 2 pages. Accepted papers will not be allowed additional
@@ -244,7 +258,8 @@
 					<div class="sidebar-box-ag">
 						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
 							Papers </a>
-						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
+						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for
+							Demos and Posters</a>
 						<a style="display: block; font-size: 1.3rem;" href="cfstian.html">Call for Satellite Technology
 							Innovation Award Nomination</a>
 
