--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 								October 2022 in the beautiful and warm city of Shenzhen, China. The conference aims to
 								become a prime international forum for both researchers and industry practitioners to
 								exchange the fundamental advances in state of the art and practice of Satellite
-								computing in the field of Computer Science and Electronic Engineers.</p>
+								computing in the field of Computer Science and Electronic Engineering.</p>
 						</article>
 						<br />
 						<br />
