--- a/org_committee.html
+++ b/org_committee.html
@@ -185,15 +185,18 @@
 							</ul>
 							<br />
 						</article>
-						<br />
+						<br />TPC
 						<article>
-							<h3 class="article-title">Technical Program Chairs</h3>
+							<h3 class="article-title">TPC Chairs</h3>
 							<ul>
 								<!-- <li>
 									<p><strong>Deepak Vasisht</strong> (University of Illinois Urbana-Champaign)</p>
 								</li> -->
 								<li>
 									<p><strong>Xiao Ma</strong> (Beijing University of Posts and Telecommunications)</p>
+								</li>
+								<li>
+									<p><strong>Wei Li</strong> (State Radio Regulation of China)</p>
 								</li>
 							</ul>
 							<br />
@@ -214,6 +217,10 @@
 							<ul>
 								<li>
 									<p><strong>Xiaobin Xu</strong> (Beijing University of Technology)
+									</p>
+								</li>
+								<li>
+									<p><strong>Gaoyuan Li</strong> (ETH Zurich)
 									</p>
 								</li>
 								<!-- <li>
