--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
 							international forum for both
 							researchers and industry practitioners to exchange the latest fundamental advances in state
 							of the art and practice of Satellite computing in the field of Computer Science and
-							Electronic Engineers.</p>
+							Electronic Engineering.</p>
 					</article>
 
 					<article>
