--- a/cfp.html
+++ b/cfp.html
@@ -221,12 +221,11 @@
 								Satellite will incorporate a <strong>double-blind</strong> review process. All papers
 								must not include
 								authors’ names and affiliations or any other contents revealing authors' information.
-								Full Papers must be <strong>no longer than 6 pages</strong> with Standard
-								template (
-								<a style="color: #4a4a4a;font-weight:400 ;"
-									href="https://www.ieee.org/conferences/publishing/templates.html">https://www.ieee.org/conferences/publishing/templates.html</a>
-
-								). In order to avoid the inconsistency of the page format of later articles, and to
+							</p>
+							<p> Papers must be <strong>no longer than 6 pages</strong> with
+								<a style="color: #4a4a4a;text-decoration: underline;"
+									href="https://www.ieee.org/conferences/publishing/templates.html">Standard
+									template</a>. In order to avoid the inconsistency of the page format of later articles, and to
 								better
 								judge the number of pages of each article, it is recommended to specify the author to
 								use letter or A4 size template.
