--- a/index.html
+++ b/index.html
@@ -253,17 +253,15 @@
 					<div class="sidebar-box-ag">
 						<h3><span class="firstword">Important</span> Dates</h3>
 						<article style="padding-top: 1rem;">
-							<h4 style="margin-bottom: 0rem;">Abstract Date:</h4>
-							<p style="margin-bottom: 0;"><strong>Saturday, 7 May 2022</strong></p>
 
 							<h4 style="margin-bottom: 0rem;margin-top: 1.2rem;">Full Paper Submission Date:</h4>
-							<p style="margin-bottom: 0;"><strong>Sunday, 15 May 2022</strong></p>
+							<p style="margin-bottom: 0;"><strong>June 15, 2022</strong></p>
 
 							<h4 style="margin-bottom: 0rem;margin-top: 1.2rem;">Notification of Acceptance Date:</h4>
-							<p style="margin-bottom: 0;"><strong>Monday, 15 August 2022</strong></p>
+							<p style="margin-bottom: 0;"><strong>August 15, 2022</strong></p>
 
 							<h4 style="margin-bottom: 0rem;margin-top: 1.2rem;">Final Paper Submission Date:</h4>
-							<p style="margin-bottom: 0.5rem;"><strong>Wednesday, 31 August 2022</strong></p>
+							<p style="margin-bottom: 0.5rem;"><strong>August 31, 2022</strong></p>
 
 						</article>
 					</div>
