--- a/about.html
+++ b/about.html
@@ -177,13 +177,13 @@
 							an effective and efficient manner.</p>
 						<p>Satellite computing, as an integration of satellite systems, aerial networks, terrestrial
 							communications, edge computing, and Cloud computing, has been emerging as a promising
-							computing architecture and are attracting intensive research interest. Moreover, world-wide
+							computing architecture and is attracting intensive research interest. Moreover, world-wide
 							companies and research institutions are scrambling to increase investment in low-orbit
 							constellations, such as Starlink, Kuiper, Telesat, and Tiansuan, due to the envisioned
 							enormous market of low-orbit earth satellites.</p>
 						<p><strong>IEEE International Conference on Satellite Computing</strong> aims to become a prime
 							international forum for both
-							researchers and industry practitioners to exchange the latest fundamental advances in state
+							researchers and industry practitioners to exchange the latest fundamental advances in the state
 							of the art and practice of Satellite computing in the field of Computer Science and
 							Electronic Engineering.</p>
 					</article>
