--- a/cfp.html
+++ b/cfp.html
@@ -220,7 +220,7 @@
 							<p>All papers should be submitted via EasyChair submission system using this link. IEEE
 								Satellite will incorporate a <strong>double-blind</strong> review process. All papers
 								must not include
-								authors’ names and affiliations or any other contents revealing authors' information.
+								authors’ names and affiliations or any other content revealing authors' information.
 							</p>
 							<p> Papers must be <strong>no longer than 6 pages</strong> with
 								<a style="color: #4a4a4a;text-decoration: underline;"
