--- a/cfstian.html
+++ b/cfstian.html
@@ -202,7 +202,7 @@
 								<li>Nominations that did not result in an award can be resubmitted or updated in
 									subsequent years.
 								</li>
-								<li>The Awards Committee will decide the winners
+								<li>The Awards Committee will decide the winners.
 								</li>
 							</ul>
 						</article>
