--- a/org_committee.html
+++ b/org_committee.html
@@ -196,7 +196,7 @@
 									<p><strong>Xiao Ma</strong> (Beijing University of Posts and Telecommunications)</p>
 								</li>
 								<li>
-									<p><strong>Wei Li</strong> (State Radio Regulation of China)</p>
+									<p><strong>Wei Li</strong> ( State Radio Spectrum Management Center)</p>
 								</li>
 							</ul>
 							<br />
