--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							<p>The 2022 IEEE International Conference on Satellite Computing will be held from 25 to 27
 								October 2022 in the beautiful and warm city of Shenzhen, China. The conference aims to
 								become a prime international forum for both researchers and industry practitioners to
-								exchange the fundamental advances in state of the art and practice of Satellite
+								exchange the fundamental advances in the state of the art and practice of Satellite
 								computing in the field of Computer Science and Electronic Engineering.</p>
 						</article>
 						<br />
