--- a/org_committee.html
+++ b/org_committee.html
@@ -189,9 +189,9 @@
 						<article>
 							<h3 class="article-title">TPC Chairs</h3>
 							<ul>
-								<!-- <li>
-									<p><strong>Deepak Vasisht</strong> (University of Illinois Urbana-Champaign)</p>
-								</li> -->
+								<li>
+									<p><strong>Jiangchuan Liu</strong> (Simon Fraser University)</p>
+								</li>
 								<li>
 									<p><strong>Xiao Ma</strong> (Beijing University of Posts and Telecommunications)</p>
 								</li>
