--- a/authors.html
+++ b/authors.html
@@ -200,6 +200,8 @@
 							<a class="brand" href="http://www.tiansuan.org.cn"><img src="img/tiansuan.png" style="height: 180px;"/></a>
 							<a class="brand" href="https://en.spacety.com/"><img src="img/tianyi.png"
 									style="height: 225px;width: 210px;margin-left: 15px;" /></a>
+							<a class="brand" href="http://www.edgearea.com/"><img src="img/Edgearea.png"
+									style="height: 161px;width: 210px;margin-left: 15px;" /></a>
 						</div>
 					</div>
 				</div>
