--- a/cfp.html
+++ b/cfp.html
@@ -217,7 +217,7 @@
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>All papers should be submitted via EasyChair submission system using this link. IEEE
+							<p>All papers should be submitted via EasyChair submission system using <a style="color: #4a4a4a;text-decoration: underline;" href="https://easychair.org/my/conference?conf=satellite2022">this link</a>. IEEE
 								Satellite will incorporate a <strong>double-blind</strong> review process. All papers
 								must not include
 								authors’ names and affiliations or any other content revealing authors' information.
