change tpc and org

--- a/t_committee.html
+++ b/t_committee.html
@@ -177,46 +177,46 @@
 							<ul>
 								
 								<li>
-									<p><strong>Ang Chen</strong> ( Rice University )</p>
+									<p><strong>Ang Chen</strong> (Rice University)</p>
 								</li>
 								<li>
-									<p><strong>Ao Zhou</strong> ( Beijing University of Posts and Telecommunications )</p>
+									<p><strong>Ao Zhou</strong> (Beijing University of Posts and Telecommunications)</p>
 								</li>
 								<li>
-									<p><strong>Chengxin Zhang</strong> ( University of Science and Technology of China )</p>
+									<p><strong>Chengxin Zhang</strong> (University of Science and Technology of China)</p>
 								</li>
 								<li>
-									<p><strong>Bassel-Al Homssi</strong> ( RMIT University )</p>
+									<p><strong>Bassel-Al Homssi</strong> (RMIT University)</p>
 								</li>
 								<li>
-									<p><strong>Hyojung Ahn</strong> ( Korea Aerospace Research Institute )</p>
+									<p><strong>Hyojung Ahn</strong> (Korea Aerospace Research Institute)</p>
 								</li>
 								<li>
-									<p><strong>Abhishek Rawat</strong> ( IITRAM )</p>
+									<p><strong>Abhishek Rawat</strong> (IITRAM)</p>
 								</li>
 								<li>
-									<p><strong>Qing Li</strong> ( Beijing University of Post and Telecommunication )</p>
+									<p><strong>Qing Li</strong> (Beijing University of Posts and Telecommunications)</p>
 								</li>
 								<li>
-									<p><strong>Thierry Gayraud</strong> ( LAAS-CNRS )</p>
+									<p><strong>Thierry Gayraud</strong> (LAAS-CNRS)</p>
 								</li>
 								<li>
-									<p><strong>Shangguang Wang</strong> ( Beijing University of Posts and Telecommunications )</p>
+									<p><strong>Shangguang Wang</strong> (Beijing University of Posts and Telecommunications)</p>
 								</li>
 								<li>
-									<p><strong>Shunlin Liang</strong> ( Beijing Normal University )</p>
+									<p><strong>Shunlin Liang</strong> (Beijing Normal University)</p>
 								</li>
 								<li>
-									<p><strong>Selmin Ener Rusen</strong> ( Karamanoğlu Mehmetbey University Faculty of Engineering Energy Systems Engineering )</p>
+									<p><strong>Selmin Ener Rusen</strong> (Karamanoğlu Mehmetbey University)</p>
 								</li>
 								<li>
-									<p><strong>Joko	Suryana</strong> ( STEI-ITB )</p>
+									<p><strong>Joko	Suryana</strong> (STEI-ITB)</p>
 								</li>
 								<li>
-									<p><strong>Vincent Lenders</strong> </p>
+									<p><strong>Vincent Lenders</strong> (Armasuisse Science and Technology) </p>
 								</li>
 								<li>
-									<p><strong>Marco Gianinetto</strong> </p>
+									<p><strong>Marco Gianinetto</strong> (Environmental and Land Management Engineering of Politecnico di Milano) </p>
 								</li>
 							</ul>
 							</br>
