--- a/t_committee.html
+++ b/t_committee.html
@@ -218,6 +218,12 @@
 								<li>
 									<p><strong>Marco Gianinetto</strong> (Environmental and Land Management Engineering of Politecnico di Milano) </p>
 								</li>
+								<li>
+									<p><strong>Ennan Zhai</strong> (Alibaba Group@Seattle) </p>
+								</li>
+								<li>
+									<p><strong>Feng Qian</strong> (University of Minnesota) </p>
+								</li>
 							</ul>
 							</br>
 							</br>
