update tpc member

--- a/t_committee.html
+++ b/t_committee.html
@@ -224,6 +224,15 @@
 								<li>
 									<p><strong>Feng Qian</strong> (University of Minnesota) </p>
 								</li>
+								<li>
+									<p><strong>Jihong Yu</strong> (Beijing Institute of Technology) </p>
+								</li>
+								<li>
+									<p><strong>Yifei Zhu</strong> (Shanghai Jiaotong University) </p>
+								</li>
+								<li>
+									<p><strong>Fangxin Wang</strong> (The Chinese University of Hong Kong (Shenzhen)) </p>
+								</li>
 							</ul>
 							</br>
 							</br>
