update some date

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="info" style="color: #ffffff;">
 					<p style="margin-bottom: 0; font-size: 1.3rem;">IEEE International Conference on Satellite Computing
 					</p>
-					<p style="margin-bottom: 0;">October 25-27, 2022 // Shenzhen, China </p>
+					<p style="margin-bottom: 0;">November 25-27, 2022 // Shenzhen, China </p>
 					<p>Hybrid event </p>
 				</div>
 				<div class="logo1">
@@ -257,13 +257,16 @@
 						<article style="padding-top: 1rem;">
 
 							<h4 style="margin-bottom: 0rem;margin-top: 1.2rem;">Full Paper Submission Date:</h4>
-							<p style="margin-bottom: 0;"><strong>June 15, 2022</strong></p>
+							<p style="margin-bottom: 0;text-decoration: line-through"><strong>June 15, 2022</strong></p>
+							<p style="margin-bottom: 0;"><strong>July 15, 2022 (Firm Deadline)</strong></p>
 
 							<h4 style="margin-bottom: 0rem;margin-top: 1.2rem;">Notification of Acceptance Date:</h4>
-							<p style="margin-bottom: 0;"><strong>August 15, 2022</strong></p>
+							<p style="margin-bottom: 0;text-decoration: line-through"><strong>August 15, 2022</strong></p>
+							<p style="margin-bottom: 0;"><strong>September 15, 2022</strong></p>
 
-							<h4 style="margin-bottom: 0rem;margin-top: 1.2rem;">Final Paper Submission Date:</h4>
-							<p style="margin-bottom: 0.5rem;"><strong>August 31, 2022</strong></p>
+							<h4 style="margin-bottom: 0rem;margin-top: 1.2rem;">Camera Ready Submission Date:</h4>
+							<p style="margin-bottom: 0;text-decoration: line-through"><strong>August 31, 2022</strong></p>
+							<p style="margin-bottom: 0.5rem;"><strong>September 31, 2022</strong></p>
 
 						</article>
 					</div>
