--- a/authors.html
+++ b/authors.html
@@ -90,7 +90,7 @@
 							<div class="dropdown-menu navbar-dark bg-primary">
 								<a class="dropdown-item" href="cfp.html">Call for Papers</a>
 								<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
-								<a class="dropdown-item" href="cfstian.html">Call for Satellite Technology Innovation
+								<a class="dropdown-item" href="cfstian.html">Call for IEEE Satellite Technology Innovation
 									Award Nomination</a>
 							</div>
 						</li>
@@ -171,7 +171,7 @@
 					<div class="sidebar-box-bg">
 						<p style="font-size: 1.1rem;">Call For Papers Is Available  <a href="cfp.html"> Here</a></p>
 						<p style="font-size: 1.1rem;">Call For Demos And Posters Is Available  <a href="cfdap.html"> Here</a></p>
-						<p style="font-size: 1.1rem;">Call For Satellite Technology Innovation Award Nomination Is Available<a href="cfstian.html"> Here</a></p>
+						<p style="font-size: 1.1rem;">Call For IEEE Satellite Technology Innovation Award Nomination Is Available<a href="cfstian.html"> Here</a></p>
 						
 						<br/>
 						<br/>
@@ -211,7 +211,7 @@
 						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
 							Papers </a>
 						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
-						<a style="display: block; font-size: 1.3rem;" href="cfdap.html">Call for Satellite Technology
+						<a style="display: block; font-size: 1.3rem;" href="cfdap.html">Call for IEEE Satellite Technology
 							Innovation Award Nomination</a>
 					</div>
 				</aside>
