--- a/cfstian.html
+++ b/cfstian.html
@@ -93,7 +93,7 @@
 								<div class="dropdown-menu navbar-dark bg-primary">
 									<a class="dropdown-item" href="cfp.html">Call for Papers</a>
 									<a class="dropdown-item" href="cfdap.html">Call for Demos and Posters</a>
-									<a class="dropdown-item" href="cfstian.html">Call for Satellite Technology Innovation
+									<a class="dropdown-item" href="cfstian.html">Call for IEEE Satellite Technology Innovation
 										Award Nomination</a>
 								</div>
 							</li>
@@ -171,11 +171,11 @@
 				<!-- Main content -->
 				<div class="col-sm-9">
 					<div class="block-title">
-						<h2>Call for Satellite Technology Innovation Award Nomination</h2>
+						<h2>Call for IEEE Satellite Technology Innovation Award Nomination</h2>
 					</div>
 					<div class="sidebar-box-bg">
 						<article>
-							<p>Satellite Technology Innovation Award recognizes one individual or one group of
+							<p>IEEE Satellite Technology Innovation Award recognizes one individual or one group of
 								collaborators who have made outstanding and innovative contributions to the advancement
 								of satellite technology.
 							</p>
@@ -243,7 +243,7 @@
 						<a style="display: block; font-size: 1.3rem; margin:4rem 0 1rem 0" href="cfp.html"> Call for
 							Papers </a>
 						<a style="display: block; font-size: 1.3rem;margin-bottom: 1rem;" href="cfdap.html">Call for Demos and Posters</a>
-						<a style="display: block; font-size: 1.3rem;" href="cfstian.html">Call for Satellite Technology
+						<a style="display: block; font-size: 1.3rem;" href="cfstian.html">Call for IEEE Satellite Technology
 							Innovation Award Nomination</a>
 					</div>
 				</aside>
