--- a/org_committee.html
+++ b/org_committee.html
@@ -201,6 +201,16 @@
 							</ul>
 							<br />
 						</article>
+						<article>
+							<h3 class="article-title">Innovation Award Chair</h3>
+							<ul>
+								<li>
+									<p><strong>ChingHsien Hsu</strong> (Asia University)</p>
+								</li>
+								
+							</ul>
+							<br />
+						</article>
 						<br />
 						<article>
 							<h3 class="article-title">Publication Chair</h3>
@@ -223,15 +233,6 @@
 									<p><strong>Gaoyuan Li</strong> (ETH Zurich)
 									</p>
 								</li>
-								<!-- <li>
-									<p><strong>Ning Zhang</strong> (University of Windsor)</p>
-								</li>
-								<li>
-									<p><strong>Sai Mounika Errapotu</strong> (University of Texas at El Paso)</p>
-								</li>
-								<li>
-									<p><strong>Mohamed Mahmoud</strong> (Tennessee Technological University)</p>
-								</li> -->
 							</ul>
 							<br />
 						</article>
